# onboarding_project

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: update_leaderboard.yaml
docs/: generate_leaderboard.py  leaderboard-instructions.md  leaderboard_results.json  project-instructions.md
include/pkg/: rviz_hallway_publisher.hpp
include/rviz_hallway_publisher/: rviz_hallway_publisher.hpp
launch/: onboarding_project.launch.py
resource/: maeserstatue_small.stl  onboarding_project_rviz_config.rviz
scripts/: AINav.py  BTNav.py  navigation.py  walls_sensor.py
src/: rviz_hallway_publisher.cpp
